# MLImageDenoiser

./: .gitignore  .gitmodules  CMakeLists.txt  ImageViewport.h  MLImageDenoiser.cpp  MLImageDenoiser.h  MLImageDenoiser.qrc  MLImageDenoiser.ui  README.md
code/: ImageViewport.cpp  ImageViewport.h  MLImageDenoiser.h  main.cpp  ui_MLImageDenoiser.h
scripts/: DownloadLinuxOIDN.py  DownloadWindowsOIDN.py  _SETUP.py
